# tauri-plugin-in_app_browser

./: Cargo.toml  README.md  build.rs  package.json
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: InAppBrowserPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.svelte  main.js
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: SafariBrowser.ts  index.ts  utils.ts
ios/: Package.swift  README.md
ios/Sources/: InAppBrowserPlugin.swift
ios/Tests/PluginTests/: PluginTests.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: close_safari.toml  open_chrome.toml  open_safari.toml  register_listener.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
