[package]
name = "tauri-plugin-in-app-browser"
version = "1.0.1"
authors = [ "Manaf941" ]
description = "Tauri plugin to open browsers in the app (SFSafariViewController & Chrome Custom Tabs)"
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-in-app-browser"

[dependencies]
tauri = { version = "2.5.0" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
tauri-build = "2.2.0"
